--- a/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,17 +1,17 @@
-  <div class="row">
-      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" >
-        <img src="../../../assets/profile.jpg" class="img-fluid" id="fotoperfil">
-      </div>
-      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p id="nombre">Alejandro Fernandez</p>
-        <p>Full Stack Developer Jr</p>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <span>
-          <h1>Acerca de mí</h1>
-          <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eius eum sequi ipsam temporibus, minima obcaecati corrupti, culpa expedita repellat vitae autem at sint eveniet. Perspiciatis autem at dolorem tenetur!</p>
-        </span>
-      </div>
+<div class="row">
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <img src="../../../assets/profile.jpg" class="img-fluid" id="fotoperfil">
   </div>
-
-
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <p id="nombre">{{persona.nombre}} {{persona.apellido}} Alejandro</p>
+    <p>Full Stack Developer Jr</p>
+  </div>
+  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <span>
+      <h1>Acerca de mí</h1>
+      <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eius eum sequi ipsam temporibus, minima
+        obcaecati corrupti, culpa expedita repellat vitae autem at sint eveniet. Perspiciatis autem at dolorem tenetur!
+      </p>
+    </span>
+  </div>
+</div>
