centrado Hard & Soft Skills

--- a/ProyectoAP_Final/FrontEnd/src/app/components/banner/banner.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,5 +1,10 @@
-<div>
-  <img src="../../../assets/cabecera.jpg" id="banner" class="img-fluid">
+<div id="borde" class="contenedor" >
+  <img src="../../../assets/cabecera.jpg" id="banner" class="img-fluid" alt="Responsive image">
+  <div id="info" style="padding: 16px;">
+    <img src="../../../assets/profile.jpg" class="profile-image" alt="profile-image">
+    
+
 </div>
+
 
 
