--- a/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,16 +1,11 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <img src="../../../assets/profile.jpg" class="img-fluid" id="fotoperfil"> 
-  </div>
-  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <!-- <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p> -->
+<div class="contenedor_" id="borde">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
-
     <p>Full Stack Developer Jr</p>
   </div>
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <span>
-      <h1>Acerca de mí</h1>
+      <h2>Acerca de mí:</h2>
       <p> Soy un diseñador experimentado que busca trabajar con empresas y clientes de todo el mundo. Tengo experiencia en la
       entrega de diseño de UX/UI de extremo a extremo. Me interesa mejorar la vida de las personas a través del diseño y
       siempre busco aprender cosas nuevas todos los días.
