--- a/ProyectoAP_Final/FrontEnd/src/app/components/footer/footer.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="contenedor2">
   <footer>
     <p>Alejandro Fernandez 2022 | ©Argentina Programa | <br><br></p>
     <div>
