--- a/ProyectoAP_Final/FrontEnd/src/app/components/header/header.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
-<div class="row">
+<div >
   <app-logo-ap></app-logo-ap>
-  <app-banner></app-banner>
-</div>
+    <app-banner></app-banner>
+  </div>
+
 
