--- a/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,42 +1,71 @@
 
-<div class="row">
+<div class="contenedor_" id="borde">
   <h2>Hard & Soft Skills:</h2>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-<circle-progress [percent]="80" [radius]="100" [imageSrc]="'../assets/html5.png'" [showImage]="true" [imageHeight]="80"
-  [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'"
-  [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
+  <div class="contenedor_center" style="text-align: center">
+  <span class="text-align:center col-sm-4 col-md-4 col-lg-4">
+<circle-progress
+  [responsive]="false"
+  [percent]="80"
+  [radius]="50"
+  [imageSrc]="'../assets/html5.png'"
+  [showImage]="true"
+  [imageHeight]="40"
+  [imageWidth]="40"
+  [showUnits]="true"
+  [outerStrokeWidth]="9"
+  [innerStrokeWidth]="8"
+  [outerStrokeColor]="'#78C000'"
+  [innerStrokeColor]="'#C7E596'"
+  [animation]="true"
+  [animationDuration]="600">
 </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress [percent]="80" [radius]="100" [imageSrc]="'../assets/CSS.png'" [showImage]="true"
-      [imageHeight]="80" [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+<circle-progress
+      [responsive]="false"
+      [percent]="80"
+      [radius]="50"
+      [imageSrc]="'../assets/CSS.png'"
+      [showImage]="true"
+      [imageHeight]="50"
+      [imageWidth]="40"
+      [showUnits]="false"
+      [outerStrokeWidth]="9"
+      [innerStrokeWidth]="8"
+      [outerStrokeColor]="'#78C000'"
+      [innerStrokeColor]="'#C7E596'"
+      [animation]="true"
+      [animationDuration]="600">
+    </circle-progress>
+      <circle-progress
+      [responsive]="false"
+      [percent]="80"
+      [radius]="50"
+      [imageSrc]="'../assets/angular.png'"
+      [showImage]="true"
+      [imageHeight]="40"
+      [imageWidth]="40"
+      [showUnits]="false"
+      [outerStrokeWidth]="9"
+      [innerStrokeWidth]="8"
+      [outerStrokeColor]="'#78C000'"
+      [innerStrokeColor]="'#C7E596'"
+      [animation]="true"
+      [animationDuration]="600">
+    </circle-progress>
+    <circle-progress [responsive]="false" [percent]="60" [radius]="50" [imageSrc]="'../assets/git.png'" [showImage]="true"
+      [imageHeight]="45" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
       [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
     </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress [percent]="80" [radius]="100" [imageSrc]="'../assets/angular.png'" [showImage]="true"
-      [imageHeight]="80" [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+    <circle-progress [responsive]="false" [percent]="40" [radius]="50" [imageSrc]="'../assets/eng.png'" [showImage]="true"
+      [imageHeight]="50" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
       [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
     </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress [percent]="60" [radius]="100" [imageSrc]="'../assets/git.png'" [showImage]="true"
-      [imageHeight]="80" [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
+    <circle-progress [responsive]="false" [percent]="80" [radius]="50" [imageSrc]="'../assets/colaboracion.png'"
+      [showImage]="true" [imageHeight]="40" [imageWidth]="40" [showUnits]="false" [outerStrokeWidth]="9"
+      [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true"
+      [animationDuration]="600">
     </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress [percent]="40" [radius]="100" [imageSrc]="'../assets/eng.png'" [showImage]="true"
-      [imageHeight]="80" [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
-    </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress [percent]="80" [radius]="100" [imageSrc]="'../assets/colaboracion.png'" [showImage]="true"
-      [imageHeight]="80" [imageWidth]="80" [showUnits]="false" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
-    </circle-progress>
-  </div>
+  </span>
+</div>
 </div>
 
 
