--- a/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -1,8 +1,8 @@
 
-  <div class="row">
-  <div class="container">
+  <div class="contenedor_ navbar-dark bg-dark" id="borde">
+  <div class="navbar navbar-dark bg-dark">
     <div class="logo">
-      <img src="../../../assets/APLogo.png" id="logoAP">
+      <img src="../../../assets/aplogo-20-20.png" id="logoAP">
     </div>
     <div class="redes">
         <a href="https://www.linkedin.com/in/ale-fer"><img src="../../../assets/linkedin.png" id="linkedin" target="blank"></a>
