--- a/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -7,14 +7,15 @@
     <div class="redes">
         <a href="https://www.linkedin.com/in/ale-fer"><img src="../../../assets/linkedin.png" id="linkedin" target="blank"></a>
         <a href="#!"><img src="../../../assets/twitter.png" id="twitter" target="blank"></a>
-        <a href="#!"><img src="../../../assets/instagram.png" id="instagram" target="blank"></a>
+        <!-- <a href="#!"><img src="../../../assets/instagram.png" id="instagram" target="blank"></a> -->
         <a href="https://github.com/Alef2k"><img src="../../../assets/github.png" id="github" target="blank"></a>
-        <!--
+
           <a href="https://www.facebook.com/alef2k"><img src="../../../assets/facebook.png" id="facebook" target="blank"></a>
-        -->
+<!--
         <a style="color: #838383;" href="https://www.facebook.com/alef2k" target="blank"><i class="fab fa-facebook-f "></i></a>
-          <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
-          <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
+        -->
+          <button type="button" class="btn btn-secondary btn-sm" (click)="login()" *ngIf="!isLogged">INGRESO</button>
+          <button type="button" class="btn btn-secondary btn-sm" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
     </div>
   </div>
 </div>
