--- a/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,14 +1,10 @@
-<div class="contenedor_" id="borde">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
-    <p>Full Stack Developer Jr</p>
-  </div>
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="contenedor_ bg-info" id="borde">
+   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <span>
-      <h2>Acerca de mí:</h2>
-      <p> Soy un diseñador experimentado que busca trabajar con empresas y clientes de todo el mundo. Tengo experiencia en la
-      entrega de diseño de UX/UI de extremo a extremo. Me interesa mejorar la vida de las personas a través del diseño y
-      siempre busco aprender cosas nuevas todos los días.
+      <h3>Acerca de mí:</h3>
+      <p> Soy un diseñador gráfico de la vieja escuela y actualmente programador web apasionado de la tecnología que busca lograr
+      soluciones y mejorar la vida de las personas. Tengo experiencia en la entrega de diseño de UX/UI de extremo a extremo.
+      Me interesa aprender y mantenerme actualizado todos los días. Soy un entusiasta autodidacta!!!
       </p>
     </span>
   </div>
