--- a/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -1,15 +1,17 @@
 <div class="contenedor_" id="borde">
-  <h2> Proyectos realizados:</h2>
+  <h3> Proyectos realizados:</h3>
   <div class="contenedor">
     <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-      <h3>Encriptador</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, nobis quaerat? Ea provident eius officiis
-        minus illum amet temporibus similique quibusdam atque omnis, commodi praesentium laboriosam harum corporis eos
-        sequi.</p>
+      <h3>Portfolio Web</h3>
+      <p>Realización del Proyecto final Argentina Programa. Ésta Aplicación consiste en el desarrollo de un Portfolio
+        web que sea de arquitectura distribuida, el cual contiene interface de usuario,
+        una base de datos y las APIS necesarias para proveer
+        la información a través de internet.</p>
     </div>
     <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-      <img src="../../../assets/eng.png" class="img-fluid img-proyecto"> </div>
-
+      <img src="../../../assets/portfolio2.png" class="img-fluid img-proyecto">
     </div>
 
   </div>
+
+</div>
