--- a/ProyectoAP_Final/FrontEnd/src/styles.css
+++ b/ProyectoAP_Final/FrontEnd/src/styles.css
@@ -18,7 +18,7 @@ a {
 /* ancho web y margenes laterales */
 
 .contenedor {
-  width: 90%;
+  width: 95%;
   max-width: 1100px;
   margin: auto;
   border-radius: 20px;
@@ -26,7 +26,7 @@ a {
 }
 
 .contenedor_ {
-  width: 90%;
+  width: 95%;
   max-width: 1100px;
   margin: auto;
   border-radius: 20px;
@@ -88,11 +88,19 @@ p {
 /* Master Class */
 .profile-image {
   border-radius: 50%;
-  width: 36%;
+  width: 50%;
   max-width: 142px;
-  height: 36%;
+  height: 50%;
   max-height: 142px;
   margin-top: -100px;
+  z-index: 1;
+
+}
+
+.texto-nombre {
+
+  max-height: 142px;
+  margin-top: -30px;
   z-index: 1;
 
 }
@@ -107,7 +115,7 @@ p {
 .mat-card#first-card {
   padding: 0;
 }
-
+/*
 #info-data {}
 
 #info-company {}
@@ -115,3 +123,4 @@ p {
 #info-contact {}
 
 #info-details {}
+*/
