--- a/ProyectoAP_Final/FrontEnd/src/app/components/footer/footer.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 
 <div class="contenedor2">
   <footer>
-    <p>Alejandro Fernandez 2022 | ©Argentina Programa | <br><br></p>
+    <p style="color: #dfdede"> ©Argentina Programa 2022 | Alejandro Fernandez &nbsp;<br><br></p>
     <div>
     <a style="color: #838383;" href="https://www.facebook.com/alef2k" target="blank">
       <i class="fab fa-facebook-f"></i></a>
