--- a/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,23 +1,31 @@
 
-<div class="contenedor_" id="borde">
-  <h3>Hard & Soft Skills:</h3>
+<div class="contenedor_ bg-light shadow-sm" id="borde">
+  <h4><b>Hard & Soft Skills:</b></h4>
   <div class="contenedor_center" style="text-align: center">
   <span class="text-align:center col-sm-4 col-md-4 col-lg-4">
+    <circle-progress [responsive]="false" [percent]="90" [radius]="50" [imageSrc]="'../assets/corel.png'" [showImage]="true"
+      [imageHeight]="50" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
+      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600" data-title="CorelDRAW">
+    </circle-progress>
+    <circle-progress [responsive]="false" [percent]="90" [radius]="50" [imageSrc]="'../assets/ps.png'" [showImage]="true"
+      [imageHeight]="50" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
+      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600" data-title="Adobe Photoshop">
+    </circle-progress>
 <circle-progress
   [responsive]="false"
   [percent]="80"
   [radius]="50"
   [imageSrc]="'../assets/html5.png'"
   [showImage]="true"
-  [imageHeight]="40"
-  [imageWidth]="40"
+  [imageHeight]="50"
+  [imageWidth]="50"
   [showUnits]="true"
   [outerStrokeWidth]="9"
   [innerStrokeWidth]="8"
   [outerStrokeColor]="'#78C000'"
   [innerStrokeColor]="'#C7E596'"
   [animation]="true"
-  [animationDuration]="600">
+  [animationDuration]="600" data-title="Html">
 </circle-progress>
 <circle-progress
       [responsive]="false"
@@ -33,11 +41,11 @@
       [outerStrokeColor]="'#78C000'"
       [innerStrokeColor]="'#C7E596'"
       [animation]="true"
-      [animationDuration]="600">
+      [animationDuration]="600" data-title="CSS">
     </circle-progress>
       <circle-progress
       [responsive]="false"
-      [percent]="80"
+      [percent]="60"
       [radius]="50"
       [imageSrc]="'../assets/angular.png'"
       [showImage]="true"
@@ -49,21 +57,18 @@
       [outerStrokeColor]="'#78C000'"
       [innerStrokeColor]="'#C7E596'"
       [animation]="true"
-      [animationDuration]="600">
+      [animationDuration]="600" data-title="JavaScript - Angular">
     </circle-progress>
     <circle-progress [responsive]="false" [percent]="60" [radius]="50" [imageSrc]="'../assets/git.png'" [showImage]="true"
       [imageHeight]="45" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
+      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600" data-title="GitHub">
     </circle-progress>
-    <circle-progress [responsive]="false" [percent]="40" [radius]="50" [imageSrc]="'../assets/eng.png'" [showImage]="true"
+    <circle-progress [responsive]="false" [percent]="100" [radius]="50" [imageSrc]="'../assets/team.png'" [showImage]="true"
       [imageHeight]="50" [imageWidth]="50" [showUnits]="false" [outerStrokeWidth]="9" [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600">
+      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="600"
+      data-title="TeamWork">
     </circle-progress>
-    <circle-progress [responsive]="false" [percent]="80" [radius]="50" [imageSrc]="'../assets/colaboracion.png'"
-      [showImage]="true" [imageHeight]="40" [imageWidth]="40" [showUnits]="false" [outerStrokeWidth]="9"
-      [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true"
-      [animationDuration]="600">
-    </circle-progress>
+
   </span>
 </div>
 </div>
