--- a/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -1,5 +1,5 @@
 
-  <div class="contenedor_ navbar-dark bg-dark" id="borde">
+  <div class="contenedor_ navbar-dark bg-dark shadow-lg" id="borde">
   <div class="navbar navbar-dark bg-dark">
     <div class="logo">
       <img src="../../../assets/aplogo-20-20.png" id="logoAP">
@@ -15,8 +15,8 @@
         <a style="color: #838383;" href="https://www.facebook.com/alef2k" target="blank"><i class="fab fa-facebook-f "></i></a>
         -->
       <span>
-          <button type="button" class="btn btn-secondary btn-sm" (click)="login()" *ngIf="!isLogged">INGRESO</button>
-          <button type="button" class="btn btn-secondary btn-sm" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
+          <button type="button" class="btn btn-secondary btn-sm" style="margin-left: 5px;" (click)="login()" *ngIf="!isLogged">INGRESO</button>
+          <button type="button" class="btn btn-secondary btn-sm" style="margin-left: 5px;" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
       </span>
     </div>
   </div>
