--- a/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -1,17 +1,33 @@
-<div class="contenedor_" id="borde">
-  <h3> Proyectos realizados:</h3>
-  <div class="contenedor">
-    <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-      <h3>Portfolio Web</h3>
-      <p>Realización del Proyecto final Argentina Programa. Ésta Aplicación consiste en el desarrollo de un Portfolio
-        web que sea de arquitectura distribuida, el cual contiene interface de usuario,
-        una base de datos y las APIS necesarias para proveer
-        la información a través de internet.</p>
-    </div>
-    <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-      <img src="../../../assets/portfolio2.png" class="img-fluid img-proyecto">
-    </div>
+<div class="contenedor_ bg-light shadow-lg" id="borde">
+  <div class="col-lg-12">
+    <h4><b>Proyectos realizados:</b></h4>
+    <table class="table">
+      <tbody>
+        <tr>
+          <td class="col-lg-7 col-md-7 col-sm-7 parte2">
+            <h4>Portfolio Web - Proyecto final Argentina Programa.</h4>
+            <p>Ésta<b> Single Page Application (SPA)</b> consiste en el desarrollo de un Portfolio
+              web que sea de arquitectura distribuida, el cual contiene interface de usuario,
+              una base de datos y las APIS necesarias para proveer la información a través de internet.</p><br>
+
+             <h5> <b> Tecnologías utilizadas: 🛠 </b></h5>
+            <ul>
+              <li><b>Angular</b> como framework para el frontend.</li>
+              <li><b>Spring Boot</b> como framework para el backend.</li>
+              <li><b>Spring Security</b> modulo de seguridad de Spring.</li>
+              <li><b>JWT estandar</b> para generar tokens de seguridad.</li>
+              <li><b>MySQL</b> base de datos del proyecto, alojada en Clever Cloud.</li>
+            </ul>
+          </td>
+          <div class="col-lg-3 col-md-3 col-sm-3  offset-lg-2 offset-md-2 offset-sm-2  parte2" >
+            <img src="../../../assets/portfolio.jpg" alt="Portfolio" class="img-fluid img-proyecto grayscale">
+          </div>
+
+        </tr>
+      </tbody>
+    </table>
 
   </div>
+
 
 </div>
