--- a/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,10 +1,10 @@
-<div class="contenedor_ bg-info" id="borde">
+<div class="contenedor_ bg-light shadow-sm" id="borde">
    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <span>
-      <h3>Acerca de mí:</h3>
-      <p> Soy un diseñador gráfico de la vieja escuela y actualmente programador web apasionado de la tecnología que busca lograr
-      soluciones y mejorar la vida de las personas. Tengo experiencia en la entrega de diseño de UX/UI de extremo a extremo.
-      Me interesa aprender y mantenerme actualizado todos los días. Soy un entusiasta autodidacta!!!
+      <h4><b>Acerca de mí:</b></h4>
+      <p> Soy un diseñador gráfico de la vieja escuela y actualmente formándome en programación web. Apasionado de la tecnología que busca lograr
+      soluciones y mejorar la vida de las personas, tengo experiencia en la entrega de diseño de <b>UX/UI </b>de extremo a extremo.
+      Me interesa aprender y mantenerme actualizado todos los días. <b>Soy un entusiasta autodidacta!!!</b>
       </p>
     </span>
   </div>
