--- a/ProyectoAP_Final/FrontEnd/src/app/components/banner/banner.component.html
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,21 +1,21 @@
-<div id="borde" class="contenedor" >
+<div id="borde" class="contenedor bg-light shadow-sm" >
   <img src="../../../assets/cabecera.jpg" id="banner" class="img-fluid" alt="Responsive image">
   <div id="info" style="padding: 3px 20px 30px;">
     <img src="../../../assets/profile.jpg" class="profile-image" alt="profile-image">
     <div id="info-data">
       <div class="col">
         <div class="float-end">
-          <a href="https://www.mariano-moreno.com.ar" target="blank">
+          <a href="https://mb.unc.edu.ar/analista-universitario-en-sistemas-informaticos/" target="blank">
             <img src="../../../assets/logos_mm.jpg"></a>
         </div>
         <div class="col">
           <span>
             <h3>{{persona.nombre}} {{persona.apellido}}</h3>
-            <div id="info-company"> Diseñador Gráfico Web - Full Stack Developer Jr </div>
+            <div id="info-company"> <b>Diseñador Gráfico Web - Full Stack Developer Jr</b> </div>
           </span>
            <div id="info-contac">
             <span>Córdoba (Argentina)</span>
-            <span> <a href="#">Informacion de Contacto</a></span>
+            <span> <a href="#"> Informacion de Contacto</a></span>
           </div>
         </div>
 
