--- a/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.css
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/hys/hys.component.css
@@ -2,4 +2,35 @@
   background-color: aqua;
   padding: 20px;
  }
- 
+
+ [data-title]:hover:after {
+   opacity: 1;
+   transition: all 0.1s ease 0.5s;
+   visibility: visible;
+ }
+
+ [data-title]:after {
+   content: attr(data-title);
+   background-color: #00FF00;
+   color: #111;
+   font-size: 90%;
+   position: absolute;
+   padding: 4px 8px;
+   bottom: -4.6em;
+   left: 0;
+   white-space: nowrap;
+   opacity: 0;
+  -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow: 0px 0px 4px #222;
+    -webkit-box-shadow: 0px 0px 4px #222;
+    box-shadow: 0px 0px 4px #222;
+   
+    z-index: 20px;
+    visibility: hidden;
+ }
+
+ [data-title] {
+   position: relative;
+ }
