--- a/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.css
+++ b/ProyectoAP_Final/FrontEnd/src/app/components/proyecto/proyecto.component.css
@@ -6,9 +6,51 @@
   display: inline-block;
   text-align: justify;
 }
+img.grayscale {
+  filter: url("data:image/svg xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  /* Firefox 10 */
+  filter: gray;
+  /*IE6-9*/
+  -webkit-filter: grayscale(100%);
+  /*Chrome 19+ & Safari 6+*/
 
-/* para poner sombra a la imagen
-.img-proyecto{
-  box-shadow: -10px -10px 20px #000000;
+  width: 100%;
+  height: 100%;
 }
-*/
+
+img.grayscale:hover {
+  filter: none;
+  -webkit-filter: grayscale(0%);
+}
+
+
+.img-proyecto{
+  box-shadow: 1px 2px 3px 0px #000000;
+}
+
+[data-title]:hover:after {
+  opacity: 1;
+  transition: all 0.1s ease 0.5s;
+  visibility: visible;
+}
+
+[data-title]:after {
+  content: attr(data-title);
+  background-color: #00FF00;
+  color: #111;
+  font-size: 150%;
+  position: absolute;
+  padding: 1px 5px 2px 5px;
+  bottom: -1.6em;
+  left: 100%;
+  white-space: nowrap;
+  box-shadow: 1px 1px 3px #222222;
+  opacity: 0;
+  border: 1px solid #111111;
+  z-index: 99999;
+  visibility: hidden;
+}
+
+[data-title] {
+  position: relative;
+}
